[package]
authors = ["Marcin Glinski <m.glinski@samsung.com>", "Michal Knapik <m.knapik@samsung.com>"]
description = "FTDB extension library"
edition = "2021"
name = "ftdb-ext"
version = "0.10.3"

[dependencies]
ahash = "0.8.11"
serde = {version = "1.0.209", features = ["derive"]}
serde_json = "1.0.127"
thiserror = "1.0.63"

[dependencies.ftdb]
default-features = false
features = ["serde"]
path = "../ftdb"

[features]
default = []
