[package]
authors = ["Marcin Gliński <m.glinski@samsung.com>"]
categories = ["external-ffi-bindings", "parsing"]
description = "Bindings for ftdb"
edition = "2021"
exclude = ["ftdb_nopy.pc", "ftdb.pc", ".gitignore"]
keywords = ["ftdb", "mbsec"]
license-file = "LICENSE.md"
name = "ftdb-sys"
version = "0.10.3"
links = "ftdb_c"

[features]
default = []
stub = []

[dependencies]
libc = "0.2.155"

[build-dependencies]
bindgen = "0.70.1"
