[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
categories = ["external-ffi-bindings", "parsing"]
description = "Bindings for ftdb"
exclude = [".gitignore", "bindings/cas"]
keywords = ["ftdb", "mbsec"]
links = "ftdb_c"
name = "ftdb-sys"

[dependencies]
libc = "0.2.155"

[build-dependencies]
bindgen = "0.70.1"
cmake = "0.1.51"
