[package]
authors = ["Marcin Glinski <m.glinski@samsung.com>"]
categories = ["parsing"]
description = "Read data from ftdb (.img) files"
edition = "2021"
keywords = ["ftdb", "mbsec", "ast"]
license-file = "LICENSE.md"
name = "ftdb"
version = "0.7.0"

[dependencies]
byteorder = { version = "1.5.0", optional = true }
ftdb-sys = { path = "../ftdb-sys/" }
lazy_static = "1.4.0"
libc = "0.2.153"
sqlx = { version = "0.7.3", optional = true }
thiserror = "1.0.57"

[dev-dependencies]
rstest = "0.18"

[features]
default = ["postgres"]
sqlx = ["dep:sqlx"]
postgres = ["sqlx", "dep:byteorder", "sqlx/postgres"]
