[package]
authors.workspace = true
edition.workspace = true
license.workspace = true
readme.workspace = true
repository.workspace = true
version.workspace = true
categories = ["parsing"]
description = "Read data from ftdb (.img) files"
keywords = ["ftdb", "mbsec", "ast"]
name = "ftdb"

[dependencies]
byteorder = { version = "1.5.0", optional = true }
ftdb-sys = { path = "../ftdb-sys/", version = "0.11.0" }
libc = "0.2.158"
sqlx = { version = "0.8.1", optional = true }
thiserror = "1.0.63"

[dependencies.serde]
version = "1.0.209"
features = ["derive"]
optional = true

[dev-dependencies]
rstest = "0.23.0"
itertools = "0.13.0"
futures = "0.3.31"
tokio = { version = "1.40.0", features = ["rt"] }

[features]
default = []
sqlx = ["dep:sqlx"]
postgres = ["sqlx", "dep:byteorder", "sqlx/postgres"]
serde = ["dep:serde"]
